# read-screen-tool

./: .gitignore  AGENTS.md  README.md  config.py  config.yaml  config.yaml.example  design.md  hotkey.py  knowledge.py  llm.py  main.py  ocr.py  overlay.py  pyproject.toml  screenshot.py  session.py  signals.py  tray.py  web_search.py
.claude/: settings.local.json
.opencode/plans/: Read-Screen-Tool Full Implementation Plan - May 10, 2026 12-37am.md  Rewrite screenshot.py from PySide6 to tkinter - May 10, 2026 2-36pm.md  rewrite-overlay-tkinter.md
.sisyphus/: ralph-loop.local.md
.sisyphus/run-continuation/: ses_1e87a479affea6eQk1g6JPWYf9.json  ses_1e89984feffeGPbeMCld3QHdW1.json  ses_1e89ce55dffeYCToYC3qE1mIjt.json  ses_1eff36fd8ffez8nDv57272Letb.json  ses_1f26d3c84ffeaILdgaHVM6tKcQ.json  ses_1f270fd28ffelFNFXanGmYP017.json
tests/: conftest.py  test_config.py  test_hotkey.py  test_knowledge.py  test_llm.py  test_main.py  test_ocr.py  test_overlay.py  test_screenshot.py  test_session.py  test_tray.py  test_web_search.py
